feat: melhorar a seção "Meu Calendário" com ajustes no layout e renderização

--- a/index.html
+++ b/index.html
@@ -274,12 +274,8 @@
                     <div class="card-header">
                         <h2 class="fs-5 mb-0">Meu Calendário de Planejamento</h2>
                     </div>
-                    <div class="card-body">
-                        <div class="alert alert-primary" role="alert">
-                            <i class="bi bi-info-circle-fill me-2"></i>
-                            Use este calendário para planejar a publicação de seus conteúdos. Clique em uma data para agendar um novo material.
-                        </div>
-                        <div id="meu-calendario-container" style="height: 400px;"></div>
+                    <div class="card-body d-flex flex-column">
+                        <div id="meu-calendario-container" class="planning-calendar-container"></div>
                     </div>
                 </div>
               </section>
