fix: remover classe desnecessária do container do calendário

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <h2 class="fs-5 mb-0">Meu Calendário de Planejamento</h2>
                     </div>
                     <div class="card-body d-flex flex-column">
-                        <div id="meu-calendario-container" class="planning-calendar-container"></div>
+                        <div id="meu-calendario-container"></div>
                     </div>
                 </div>
               </section>
