fix: atualizar mensagem de boas-vindas no alerta do calendário

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <div class="alert alert-info d-flex align-items-center mb-4" role="alert">
                         <i class="bi bi-info-circle-fill me-3 fs-4"></i>
                         <div>
-                          Bem-vindo(a)! Navegue pelas abas para encontrar mentores recomendados, em destaque ou busque em nossa comunidade.
+                          Bem-vindo(a)! Conecte-se, aprenda e cresça encontrando o mentor ideal para você.
                         </div>
                     </div>
     
