feat: atualizar título do modal de postagem de conteúdo

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ Quartas: 14h - 16h"></textarea></div>
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="scheduleContentModalLabel">Postar Conteúdo</h1>
+          <h1 class="modal-title fs-5" id="scheduleContentModalLabel"> Conteúdo</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body">
